--- a/app/views/layouts/app.html.erb
+++ b/app/views/layouts/app.html.erb
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Public+Sans:300,400,500&display=swap" rel="stylesheet">
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <%= javascript_tag 'Index' %>
   </head>
 
   <body>
