--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,8 +22,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><i class="fa fa-lg fa-dot-circle-o"></i></a></li>
         <li><a href="/events/new"><i class="fa fa-plus"></i>&nbsp;Create event</a></li>
-        <% if current_user.is_super_user? %>
-          <li><a href="/admins/index">Admin</a></li>
+        <% if user_signed_in? %>
+          <% if current_user.is_super_user? %>
+            <li><a href="/admins/index">Admin</a></li>
+          <% end %>
         <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-md fa-user"></i> <span class="caret"></span></a>
