Venues completed Reviews completed venues features added to this one

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require datepicker/bootstrap-datetimepicker.min.css
+ *= require toastr
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
