--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
 
   <body id="main_body">
     <%= render 'layouts/home_nav' %>
+      <% unless flash.empty? %>
+        <script type="text/javascript">
+            <% flash.each do |f| %>
+            <% type = f[0].to_s %>
+            toastr['<%= type %>']('<%= f[1] %>');
+            <% end %>
+        </script>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
