--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,10 +1,49 @@
+.mp-0{
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
 .mt-5{
 	margin-top: 50px;
+}
+.mt-4{
+	margin-top: 40px;
+}
+.mt-3{
+	margin-top: 30px;
+}
+.mt-2{
+	margin-top: 20px;
+}
+.mt-1{
+	margin-top: 10px;
 }
 
 .mtb-5{
 	margin: 50px 0px;
 }
+.mtb-4{
+	margin: 40px 0px;
+}
+.mtb-3{
+	margin: 30px 0px;
+}
 .mb-5{
 	margin-bottom: 50px;
+}
+
+.mb-5{
+	margin-bottom: 50px;
+}
+.mb-4{
+	margin-bottom: 40px;
+}
+.mb-3{
+	margin-bottom: 30px;
+}
+.mb-2{
+	margin-bottom: 20px;
+}
+.mb-1{
+	margin-bottom: 10px;
 }
