--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,22 +13,31 @@
     <% end %>
     <div class="step-1">
       <div class="form-group">
+        <label>Event name</label>
         <%= form.text_field :title, class: "form-control required", placeholder: "Event name" %>
       </div>
 
       <div class="form-group">
+        <label>Event description</label>
         <%= form.text_area :description, class: "form-control required", placeholder: "Event description" %>
       </div>
       <div class="form-group">
+        <label>Event banner</label>
         <%= form.file_field :event_poster, class: "form-control required", placeholder: "Event name" %>
       </div>
 
       <div class="form-group", id="datetimepicker">
+        <label>Event start date</label>
         <%= form.text_field :start_date, class: "form-control required" %>
+      </div>
+      <div class="form-group", id="datetimepicker">
+        <label>Event end date</label>
+        <%= form.text_field :end_date, class: "form-control", placeholder: "End date" %>
       </div>
     <div class="step-2">
 
       <div class="form-group">
+        <label>Location</label>
         <%= form.text_area :location, class: "form-control required", placeholder: "Event location" %>
       </div>
 
@@ -38,18 +47,20 @@
       </div>
 
       <div class="form-group">
-        <%= form.select :payment, Event.payments, class: "form-control" %>
+        <label>Select payment action</label>
+        <%= form.select :payment, Event.payments, {}, { class: "form-control", id: "payment_options" } %>
       </div>
-      <div class="form-group", id="datetimepicker">
-        <%= form.text_field :end_date, class: "form-control", placeholder: "End date" %>
+      <div class="form-group" id="payable_amount">
+        <label>Enter price or donation price</label>
+        <%= form.number_field :payment_amount_based_on_enum, class: "form-control", placeholder: "Ticket Price" %>
       </div>
+      
       <div class="form-group">
+        <label>Total seats</label>
         <%= form.text_field :total_seats, class: "form-control", placeholder: "Total seats" %>
       </div>
 
-      <div class="form-group">
-        <%= form.number_field :payment_amount_based_on_enum, class: "form-control", placeholder: "Ticket Price" %>
-      </div>
+      
     </div>
     <div class="step-3">
       <div class="form-group">
