added venue registrations and food forms

--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -28,7 +28,7 @@
           </li>
         <% else %>
           <li>
-            <a class="page-scroll" href="/events">Dashboard</a>
+            <a class="page-scroll" href="/venues">Dashboard</a>
           </li>
           <li>
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "page-scroll" %>
