--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,22 +6,20 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="section-title">
-          <h2>Events</h2>
-          <p>Recent events.</p>
+          <h2>Venues list</h2>
         </div>
       </div>
     </div>
     <div class="row row-0-gutter">
       <!-- start portfolio item -->
-      <% @events.each do |e| %>
+      <% @venues.each do |e| %>
         <div class="col-md-6 col-0-gutter">
           <div class="ot-portfolio-item">
             <figure class="effect-bubba">
-              <img src="https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=400&w=940" alt="img02" class="img-responsive">
+              <%= image_tag e.albums.last.venue_images.last.venue_profile.url, class: "img-responsive" %>
               <figcaption>
-                <h2><%= e.title %></h2>
-                <p><%= dateformat(e.start_date) %></p>
-                <%= link_to "View more", event_path(e) %>
+                <h2><%= e.name %></h2>
+                <%= link_to "View more", venue_path(e) %>
               </figcaption>
             </figure>
           </div>
